# docs/swagger.json
@@ -447,6 +447,11 @@
         },
         "/organizations": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Возвращает список организаций с пагинацией",
                 "consumes": [
                     "application/json"
